--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-0" style=" padding: 1rem; ">
                 <div class="card-body">
-                  <a class="logo-img1 rsn" href="#" target="_blank"><img src="img/RSNNE.png" alt="" width="250"></a>
+                  <a class="logo-img1 rsn" href="#" target="_blank"><img src="img/RSNNE.png" alt="Regional Stakeholder Network Logo" width="250"></a>
                 </div>
               </div>
             </div>
@@ -78,7 +78,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
-                  <a class="logo-img" href="https://www.northumbria.ac.uk/" target="_blank"><img src="img/north-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="https://www.northumbria.ac.uk/" target="_blank"><img src="img/north-logo.png" alt="Northumbria University Logo" width="250"></a>
                 </div>
               </div>
             </div>
@@ -86,7 +86,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
-                  <a class="logo-img" href="https://www.ncl.ac.uk/" target="_blank"><img src="img/ncl-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="https://www.ncl.ac.uk/" target="_blank"><img src="img/ncl-logo.png" alt="Newcastle University Logo" width="250"></a>
                 </div>
               </div>
             </div>
@@ -94,7 +94,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
-                  <a class="logo-img" href="https://openlab.ncl.ac.uk/" target="_blank"><img src="img/openlab-logo.png" alt="" width="250"></a>
+                  <a class="logo-img" href="https://openlab.ncl.ac.uk/" target="_blank"><img src="img/openlab-logo.png" alt="Open Lab Logo" width="250"></a>
                 </div>
               </div>
             </div>
@@ -102,7 +102,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-1 logo">
                 <div class="card-body">
-                  <a class="logo-img" href="#" target="_blank"><img src="img/cabinet-office.png" alt="" width="250"></a>
+                  <a class="logo-img" href="#" target="_blank"><img src="img/cabinet-office.png" alt="Cabinet Office Logo" width="250"></a>
                 </div>
               </div>
             </div>
