--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="RSN and Northumbria logos" width="250"></a>
+        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="RSN NE and Northumbria University Newcastle logos" width="250"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
