--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-0" style=" padding: 1rem; ">
                 <div class="card-body">
-                  <a class="logo-img1 rsn" href="#" target="_blank"><img src="img/RSNNE.png" alt="Regional Stakeholder Network Logo" width="250"></a>
+                  <a class="logo-img1 rsn" href="#" target="_blank"><img src="img/RSNNE.png" alt="Regional Stakeholder Network North East Logo" width="250"></a>
                 </div>
               </div>
             </div>
@@ -129,8 +129,8 @@
             <h2 class="h5 mb-4">Contact Info</h2>
             <ul class="list-unstyled mr-4 mb-3">
               <li class="mb-2 text-muted"> </li>
-              <li class="mb-2"><a class="footer-link" href="tel:000-000-0000">000-000-0000</a></li>
-              <li class="mb-2"><a class="footer-link" href="mailto:email@example.com">email@example.com</a></li>
+              <li class="mb-2">Michael Potts</li>
+              <li class="mb-2"><a class="footer-link" href="mailto:m.m.potts@ch-six.com">m.m.potts@ch-six.com</a></li>
             </ul>
             <ul class="list-inline mb-0">
               <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
