--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             <h2 class="h5 mb-4">Quick Links</h2>
             <div class="d-flex">
               <ul class="list-unstyled d-inline-block mr-4 mb-0">
-                <li class="mb-2"><a class="footer-link" href="#">About the project </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Our Team </a></li>
+                <li class="mb-2"><a class="footer-link" href="index.html">About the project </a></li>
+                <li class="mb-2"><a class="footer-link" href="team.html">Our Team </a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
               </ul>
             </div>
