--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="img/favicon1.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -32,13 +32,13 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="250"></a>
+        <div class="container"><a class="navbar-brand" href="/"><img src="img/logo.png" alt="RSN NE and Northumbria University Newcastle logos" width="250"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home <span class="sr-only">(current)</span></a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home </a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="about.html">About</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll active" href="team.html">Team</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll active" href="team.html">Team <span class="sr-only">(current)</span></a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="contact.html">Contact</a></li>
             </ul>
           </div>
@@ -67,7 +67,6 @@
                   <p class="text-small mb-0">Chair of Regional Stakeholder Network North East</p>
                    <ul class="list-inline mb-0">
                     <li class="list-inline-item"><a class="social-link" href="mailto:m.m.potts@ch-six.com"><i class="fas fa-envelope"></i></a></li>
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
                    </ul>
                 </div>
               </div>
@@ -83,7 +82,6 @@
                   <p class="text-small mb-0">Northumbria University</p>
                     <ul class="list-inline mb-0">
                     <li class="list-inline-item"><a class="social-link" href="mailto:rob.wilson@northumbria.ac.uk"><i class="fas fa-envelope"></i></a></li>
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
                    </ul>
                 </div>
               </div>
@@ -97,10 +95,6 @@
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Kyle Montague </h3>
                   <p class="text-small mb-0">Northumbria University</p>
-                   <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="mailto:kyle.montague@newcastle.ac.uk"><i class="fas fa-envelope"></i></a></li>
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
-                   </ul>
                 </div>
               </div>
             </div>
@@ -113,10 +107,6 @@
                   </svg>
                   <h3 class="font-weight-normal h5 my-4"> Abdulaziz Alderhami</h3>
                   <p class="text-small mb-0">Newcastle University</p>
-                   <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="mailto:a.m.a.alderhami2@newcastle.ac.uk"><i class="fas fa-envelope"></i></a></li>
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
-                   </ul>
                 </div>
               </div>
             </div>
@@ -129,10 +119,6 @@
                   </svg>
                   <h3 class="font-weight-normal h5 my-4">Anne Spaa </h3>
                   <p class="text-small mb-0">Northumbria University</p>
-                   <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="mailto:anne.spaa@northumbria.ac.uk"><i class="fas fa-envelope"></i></a></li>
-                    <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-twitter"></i></a></li>
-                   </ul>
                 </div>
               </div>
             </div>
@@ -150,8 +136,8 @@
             <h2 class="h5 mb-4">Quick Links</h2>
             <div class="d-flex">
               <ul class="list-unstyled d-inline-block mr-4 mb-0">
-                <li class="mb-2"><a class="footer-link" href="#">About the project </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Our Team </a></li>
+                <li class="mb-2"><a class="footer-link" href="about.html">About the project </a></li>
+                <li class="mb-2"><a class="footer-link" href="team.html">Our Team </a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
               </ul>
             </div>
@@ -160,11 +146,10 @@
             <h2 class="h5 mb-4">Contact Info</h2>
             <ul class="list-unstyled mr-4 mb-3">
               <li class="mb-2 text-muted"> </li>
-              <li class="mb-2"><a class="footer-link" href="tel:000-000-0000">000-000-0000</a></li>
-              <li class="mb-2"><a class="footer-link" href="mailto:email@example.com">email@example.com</a></li>
+              <li class="mb-2">Michael Potts</li>
+              <li class="mb-2"><a class="footer-link" href="mailto:m.m.potts@ch-six.com">m.m.potts@ch-six.com</a></li>
             </ul>
             <ul class="list-inline mb-0">
-              <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative"><i class="fab fa-twitter"></i></a></li>
             </ul>
           </div>
