--- a/about.html
+++ b/about.html
@@ -32,12 +32,12 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="250"></a>
+        <div class="container"><a class="navbar-brand" href="/"><img src="img/logo.png" alt="" width="250"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home <span class="sr-only">(current)</span></a></li>
-              <li class="nav-item"><a class="nav-link link-scroll active" href="about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="/">Home</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll active" href="about.html">About <span class="sr-only">(current)</span></a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="team.html">Team</a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="contact.html">Contact</a></li>
             </ul>
@@ -80,7 +80,7 @@
     <footer class="with-pattern-1 position-relative">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-0"><img class="mb-2" src="img/logo.png" alt="" width="250">
+          <div class="col-lg-4 mb-4 mb-lg-0"><img class="mb-2" src="img/logo.png" alt="RSN NE and Northumbria University Newcastle logos" width="250">
             <p class="text-muted">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</p>
           </div>
           <div class="col-lg-3 mb-4 mb-lg-0">
@@ -97,12 +97,11 @@
             <h2 class="h5 mb-4">Contact Info</h2>
             <ul class="list-unstyled mr-4 mb-3">
               <li class="mb-2 text-muted"> </li>
-              <li class="mb-2"><a class="footer-link" href="tel:000-000-0000">000-000-0000</a></li>
-              <li class="mb-2"><a class="footer-link" href="mailto:email@example.com">email@example.com</a></li>
+              <li class="mb-2">Michael Potts</li>
+              <li class="mb-2"><a class="footer-link" href="mailto:m.m.potts@ch-six.com">m.m.potts@ch-six.com</a></li>
             </ul>
             <ul class="list-inline mb-0">
-              <li class="list-inline-item"><a class="social-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
-              <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative"><i class="fab fa-twitter"></i></a></li>
+              <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative" target="_blank"><i class="fab fa-twitter"></i></a></li>
             </ul>
           </div>
         </div>
