--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container"><a class="navbar-brand" href="/"><img src="img/logo.png" alt="" width="250"></a>
+        <div class="container"><a class="navbar-brand" href="/"><img src="img/logo.png" alt="RSN NE and Northumbria University Newcastle logos" width="250"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
@@ -99,9 +99,7 @@
               <li class="mb-2 text-muted"> </li>
               <li class="mb-2">Michael Potts</li>
               <li class="mb-2"><a class="footer-link" href="mailto:m.m.potts@ch-six.com">m.m.potts@ch-six.com</a></li>
-            </ul>
-            <ul class="list-inline mb-0">
-              <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative" target="_blank"><i class="fab fa-twitter"></i></a></li>
+              <li class="mb-2"><a class="social-link" href="https://twitter.com/RSNInitiative" target="_blank"><i class="fab fa-twitter"></i></a></li>
             </ul>
           </div>
         </div>
