--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
               <li class="nav-item"><a class="nav-link link-scroll active" href="/">Home <span class="sr-only">(current)</span></a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="about.html">About</a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="team.html">Team</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -68,7 +67,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-0" style=" padding: 1rem; ">
                 <div class="card-body">
-                  <a class="logo-img1 rsn" href="#" target="_blank"><img src="img/RSNNE.png" alt="Regional Stakeholder Network North East Logo" width="250"></a>
+                  <img src="img/RSNNE.png" alt="Regional Stakeholder Network North East Logo" width="250">
                 </div>
               </div>
             </div>
@@ -76,7 +75,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
-                  <a class="logo-img" href="https://www.northumbria.ac.uk/" target="_blank"><img src="img/north-logo.png" alt="Northumbria University Logo" width="250"></a>
+                 <img src="img/north-logo.png" alt="Northumbria University Logo" width="250">
                 </div>
               </div>
             </div>
@@ -84,23 +83,7 @@
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-3">
                 <div class="card-body">
-                  <a class="logo-img" href="https://www.ncl.ac.uk/" target="_blank"><img src="img/ncl-logo.png" alt="Newcastle University Logo" width="250"></a>
-                </div>
-              </div>
-            </div>
-             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 logo">
-              <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-3">
-                <div class="card-body">
-                  <a class="logo-img" href="https://openlab.ncl.ac.uk/" target="_blank"><img src="img/openlab-logo.png" alt="Open Lab Logo" width="250"></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-2 col-md-6">
-              <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-1 logo">
-                <div class="card-body">
-                  <a class="logo-img" href="#" target="_blank"><img src="img/cabinet-office.png" alt="Cabinet Office Logo" width="250"></a>
+                  <img src="img/ncl-logo.png" alt="Newcastle University Logo" width="250">
                 </div>
               </div>
             </div>
@@ -117,9 +100,8 @@
             <h2 class="h5 mb-4">Quick Links</h2>
             <div class="d-flex">
               <ul class="list-unstyled d-inline-block mr-4 mb-0">
-                <li class="mb-2"><a class="footer-link" href="index.html">About the project </a></li>
+                <li class="mb-2"><a class="footer-link" href="about.html">About the project </a></li>
                 <li class="mb-2"><a class="footer-link" href="team.html">Our Team </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
               </ul>
             </div>
           </div>
@@ -128,7 +110,7 @@
             <ul class="list-unstyled mr-4 mb-3">
               <li class="mb-2 text-muted"> </li>
               <li class="mb-2">Michael Potts</li>
-              <li class="mb-2"><a class="footer-link" href="mailto:m.m.potts@ch-six.com">m.m.potts@ch-six.com</a></li>
+              <li class="mb-2"><a class="footer-link" href="mailto:rsnnortheast@gmail.com">rsnnortheast@gmail.com</a></li>
             </ul>
             <ul class="list-inline mb-0">
               <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative"><i class="fab fa-twitter"></i></a></li>
