--- a/about.html
+++ b/about.html
@@ -39,7 +39,6 @@
               <li class="nav-item"><a class="nav-link link-scroll" href="/">Home</a></li>
               <li class="nav-item"><a class="nav-link link-scroll active" href="about.html">About <span class="sr-only">(current)</span></a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="team.html">Team</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -89,7 +88,6 @@
               <ul class="list-unstyled d-inline-block mr-4 mb-0">
                 <li class="mb-2"><a class="footer-link" href="#">About the project </a></li>
                 <li class="mb-2"><a class="footer-link" href="#">Our Team </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
               </ul>
             </div>
           </div>
@@ -98,7 +96,7 @@
             <ul class="list-unstyled mr-4 mb-3">
               <li class="mb-2 text-muted"> </li>
               <li class="mb-2">Michael Potts</li>
-              <li class="mb-2"><a class="footer-link" href="mailto:m.m.potts@ch-six.com">m.m.potts@ch-six.com</a></li>
+              <li class="mb-2"><a class="footer-link" href="mailto:rsnnortheast@gmail.com">rsnnortheast@gmail.com</a></li>
               <li class="mb-2"><a class="social-link" href="https://twitter.com/RSNInitiative" target="_blank"><i class="fab fa-twitter"></i></a></li>
             </ul>
           </div>
