--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
                   <h3 class="font-weight-normal h5 my-4">Michael Potts </h3>
                   <p class="text-small mb-0">Chair of Regional Stakeholder Network North East</p>
                    <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a class="social-link" href="mailto:m.m.potts@ch-six.com"><i class="fas fa-envelope"></i></a></li>
+                    <li class="list-inline-item"><a class="social-link" href="mailto:rsnnortheast@gmail.com"><i class="fas fa-envelope"></i></a></li>
                    </ul>
                 </div>
               </div>
@@ -129,7 +129,7 @@
 <footer class="with-pattern-1 position-relative">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-0"><img class="mb-2" src="img/logo.png" alt="" width="250">
+          <div class="col-lg-4 mb-4 mb-lg-0"><img class="mb-2" src="img/logo.png" alt="RSN NE and Northumbria University Newcastle logos" width="250">
             <p class="text-muted">A Covid-19 response project by New Regional Stakeholder Network and Northumbria University</p>
           </div>
           <div class="col-lg-3 mb-4 mb-lg-0">
@@ -138,7 +138,6 @@
               <ul class="list-unstyled d-inline-block mr-4 mb-0">
                 <li class="mb-2"><a class="footer-link" href="about.html">About the project </a></li>
                 <li class="mb-2"><a class="footer-link" href="team.html">Our Team </a></li>
-                <li class="mb-2"><a class="footer-link" href="#">Contact us</a></li>
               </ul>
             </div>
           </div>
@@ -147,7 +146,7 @@
             <ul class="list-unstyled mr-4 mb-3">
               <li class="mb-2 text-muted"> </li>
               <li class="mb-2">Michael Potts</li>
-              <li class="mb-2"><a class="footer-link" href="mailto:m.m.potts@ch-six.com">m.m.potts@ch-six.com</a></li>
+              <li class="mb-2"><a class="footer-link" href="mailto:rsnnortheast@gmail.com">rsnnortheast@gmail.com</a></li>
             </ul>
             <ul class="list-inline mb-0">
               <li class="list-inline-item"><a class="social-link" href="https://twitter.com/RSNInitiative"><i class="fab fa-twitter"></i></a></li>
