--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="RSN NE and Northumbria University Newcastle logos" width="250"></a>
+        <div class="container"><a class="navbar-brand" href="/"><img src="img/logo.png" alt="RSN NE and Northumbria University Newcastle logos" width="250"></a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
@@ -61,7 +61,7 @@
     <section class="bg-center py-0" id="team" style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
       <section class="about py-0">
         <div class="container">
-          <p class="h6 text-uppercase text-primary">Affiliations </p> <br />
+          <h3 class="h3 text-uppercase text-primary">Affiliations </h3> <br />
            <div class="row pb-5">
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 logo">
               <!-- Services Item-->
