--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 logo">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-0" style=" padding: 1rem; ">
-                <div class="card-body">
+                <div class="card-body rsn">
                   <img src="img/RSNNE.png" alt="Regional Stakeholder Network North East Logo" width="250">
                 </div>
               </div>
