--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
            <div class="row pb-5">
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 press">
               <!-- Services Item-->
-              <div class="cardl border-0 shadow rounded-lg py-0" style="padding: 10px; width:300px !important">
+              <div class="card border-0 shadow rounded-lg py-0" style="padding: 10px; width:300px !important">
                 <div class="card-body press">
                   <img src="img/chronicle-live.png" alt="Chronicle Live Logo" width="250">
                   <p class="link"><a href="https://www.chroniclelive.co.uk/news/north-east-news/disabled-people-struggling-access-food-18601274">Disabled people struggling to access food and vital medical supplies during pandemic, group claims </a></p>
