--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
               <!-- Services Item-->
               <div class="card border-0 shadow rounded-lg py-0" style="padding: 10px; width:300px !important">
                 <div class="card-body press">
-                  <img src="img/chronicle-live.png" alt="Chronicle Live Logo" width="250">
-                  <p class="link"><a class="footer-link" href="https://www.chroniclelive.co.uk/news/north-east-news/disabled-people-struggling-access-food-18601274">Disabled people struggling to access food and vital medical supplies during pandemic, group claims </a></p>
+                 <p class="link"><a class="footer-link" href="https://www.chroniclelive.co.uk/news/north-east-news/disabled-people-struggling-access-food-18601274" target="_blank"> <img src="img/chronicle-live.png" alt="Chronicle Live Logo" width="250">
+                  Disabled people struggling to access food and vital medical supplies during pandemic, group claims </a></p>
                 </div>
               </div>
             </div>
