--- a/openLetter1.html
+++ b/openLetter1.html
@@ -37,9 +37,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a class="nav-link link-scroll" href="/">Home</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll active" href="about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="about.html">About</a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="team.html">Team</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="openLetter.html">Open Letter <span class="sr-only">(current)</span> </a></li>
+              <li class="nav-item"><a class="nav-link link-scroll active" href="openLetter.html">Open Letter <span class="sr-only">(current)</span> </a></li>
             </ul>
           </div>
         </div>
