--- a/openLetter1.html
+++ b/openLetter1.html
@@ -53,7 +53,7 @@
             <h1 class="font-weight-bold" style="text-align: center;">The Regional Stakeholder Network North East Initiative: The NE, COVID-19 & DISABILITY</h1>
             <h3 style="text-align: center;">A call to help advise Government</h3>
             
-            <p class="my-4">We are looking for respondents to our survey: <a href="bit.ly/RSNsurvey"> RSN Survey</a> to tell government about how COVID19 is effecting charities in the NE region.</p> 
+            <p class="my-4">We are looking for respondents to our survey: <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMVI1RjQ5SUY4RE5XQVY5RVM2MkFJSE05Qy4u"> RSN Survey</a> to tell government about how COVID19 is effecting charities in the NE region.</p> 
             <p class="my-4">Last year the UK Government launched the Regional Stakeholder Network to bring the voice of the disabled into the heart of Government. The North East of England has the highest percentage of disabled people in the country, making the North East Network one of the most important to be heard. The region is vibrant and diverse communities and their needs are unique and complex.</p>
 
             <p class="my-4">The UK is currently going through an unprecedented health crisis due to COVID-19. This pandemic is causing severe problems in the North East and is even more severe for the disabled community. The effects upon the disabled and those who support them has been devastating. Since the very start of the pandemic the NE Network has been advising Government on what the issues and problems are here.</p> 
