--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
         </div>
       </nav>
     </header>
-    <section class="p-0" id="testimonials" style="background: url(img/testimonials-bg.png) no-repeat; background-size: 40% 100%; background-position: left center">
+    <section class="p-" id="testimonials" style="background: url(img/testimonials-bg.png) no-repeat; background-size: 40% 100%; background-position: left center">
       <div class="container text-center">
         <p class="h6 text-uppercase text-primary"> Open Letter</p>
         <h2 class="mb-5">Open Letter</h2>
