--- a/test.html
+++ b/test.html
@@ -47,7 +47,7 @@
     </header>
     <section class="p-" id="testimonials" style="background: url(img/testimonials-bg.png) no-repeat; background-size: 40% 100%; background-position: left center">
       <div class="container text-center">
-        <h1 class="mb-5">Open Letter</h1>
+        <h1 class="mb-5 my-5">Open Letter</h1>
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <div class="owl-carousel owl-theme testimonials-slider">
