--- a/test.html
+++ b/test.html
@@ -54,7 +54,7 @@
               <div class="mx-3 mx-lg-5 my-2 pt-3">
                 <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                   <div class="card-body index-forward pt-5 rounded-lg">
-                    <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div>
+                    <!--<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div> -->
                     <p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                     <a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMUZIMjBZQzA4TU1QREw5TlVCSUdHMktMWC4u" target="_blank"> <i class="fas fa-edit mr-2"></i>Link to the form</a>
                   </div>
