--- a/test.html
+++ b/test.html
@@ -54,8 +54,8 @@
               <div class="mx-3 mx-lg-5 my-2 pt-3">
                 <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                   <div class="card-body index-forward pt-5 rounded-lg">
-                    <!--<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div> -->
-                    <p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div>
+                    <p class="lead text-muted mb-5"> The disabled community in the North East, the individuals, carers, and the charities, groups, and public bodies, which support them, is incredibly talented and diverse. They are the experts in how their disability is effecting their own lives. They know only too well how COVID-19 is effecting them. Only charities and groups who support the disabled community everyday know how it is impacting their work and staff. With this ground-breaking Initiative we are seeking to tap into this incredible community and have them tell us how the pandemic is effecting them. Together we can work together to impact their lives. The disabled community needs to be heard and they need to have a voice on things which directly effect them.</p>
                     <a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMUZIMjBZQzA4TU1QREw5TlVCSUdHMktMWC4u" target="_blank"> <i class="fas fa-edit mr-2"></i>Link to the form</a>
                   </div>
                 </div>
