--- a/test.html
+++ b/test.html
@@ -55,7 +55,7 @@
                 <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                   <div class="card-body index-forward pt-5 rounded-lg">
                     <!--<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div>-->
-                    <p class="lead text-muted mb-5"> This remains a scary time for many people but particularly those most vulnerable members of the community. These initial findings are only the beginning to working in a longer-term collaboration to put in place infrastructure which supports those providing and needing help to have their voices heard.</p>
+                    <p class="lead text-muted mb-5"></p>
                     <a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMUZIMjBZQzA4TU1QREw5TlVCSUdHMktMWC4u" target="_blank"> <i class="fas fa-edit mr-2"></i>Link to the form</a>
                   </div>
                 </div>
