--- a/openLetter1.html
+++ b/openLetter1.html
@@ -87,7 +87,7 @@
                   <div class="card-body index-forward pt-5 rounded-lg">
                     <!--<div class="testimonial-img"><img class="rounded-circle" src="img/avatar-2.png" alt=""/></div>-->
                     <p class="lead text-muted mb-5"></p>
-                    <a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMUZIMjBZQzA4TU1QREw5TlVCSUdHMktMWC4u" target="_blank"> <i class="fas fa-edit mr-2"></i>Link to the form</a>
+                    <a class="btn btn-primary btn-lg px-4" href="https://forms.office.com/Pages/ResponsePage.aspx?id=3c9X5zUfV0Svj3ycaxQ340PritOjm0RNgACUwols-l9UMUZIMjBZQzA4TU1QREw5TlVCSUdHMktMWC4u" target="_blank"> <i class="fas fa-edit mr-2"></i>Add your name</a>
                   </div>
                 </div>
               </div>
