--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
               <li class="nav-item"><a class="nav-link link-scroll" href="/">Home </a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="about.html">About</a></li>
               <li class="nav-item"><a class="nav-link link-scroll active" href="team.html">Team <span class="sr-only">(current)</span></a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="openLetter.html">Open Letter</a></li>
+              <!--<li class="nav-item"><a class="nav-link link-scroll" href="openLetter.html">Open Letter</a></li>-->
             </ul>
           </div>
         </div>
